:sparkles: Introducing ability to set gravatar email in use for single user mode #67

--- a/src/uActivityPub/App_Plugins/uActivityPub/backoffice/uactivitypub/dashboard.html
+++ b/src/uActivityPub/App_Plugins/uActivityPub/backoffice/uactivitypub/dashboard.html
@@ -39,6 +39,16 @@
 
                     <div class="umb-permission uActivityPub-setting-value">
                         <div class="umb-permission__content">
+                            <div>Single user mode gravatar email</div>
+                            <div class="umb-permission__description">The email uActivityPub will use for the icon  when in single user mode.</div>
+                        </div>
+                        <div class="umb-permission__value">
+                            {{vm.settings.gravatarEmail}}
+                        </div>
+                    </div>
+
+                    <div class="umb-permission uActivityPub-setting-value">
+                        <div class="umb-permission__content">
                             <div>Content type alias</div>
                             <div class="umb-permission__description">The alias of the content type uActivityPub watches to make posts about.</div>
                         </div>
